Implemented showing wallpaper

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </form>
         <div class="js-todoList"></div>
     </div>
+    <script src="src/wallpaper.js"></script>
     <script src="src/welcome.js"></script>
     <script src="src/todo.js"></script>
 </body>
