--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </form>
         <div class="js-todoList"></div>
     </div>
+    <span class="js-weather">Getting temperature...</span>
     <script src="src/wallpaper.js"></script>
+    <script src="src/weather.js"></script>
     <script src="src/welcome.js"></script>
     <script src="src/todo.js"></script>
 </body>
