--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <body>
     <h2 class="js-welcome welcome"></h2>
     <h1 class="js-clock clock"></h1>
+    <h3 class="js-weather weather">Getting temperature...</h3>
     <form class="js-username form">
         <input type="text" placeholder="Type your name.">
     </form>
-    <div class="js-todo">
+    <div class="js-todo css-todo">
         <form class="js-todoForm">
-            <input type="text" name="" class="js-todoInput" placeholder="Type your todo">
+            <input type="text" class="js-todoInput" placeholder="Type your todo">
         </form>
-        <div class="js-todoList"></div>
+        <div class="js-todoList todolist"></div>
     </div>
-    <span class="js-weather">Getting temperature...</span>
     <script src="src/wallpaper.js"></script>
     <script src="src/weather.js"></script>
     <script src="src/welcome.js"></script>
